--- a/po/lt.po
+++ b/po/lt.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2010-05-18 07:39+0000\n"
-"Last-Translator: Rytis Ūsalis <Unknown>\n"
+"PO-Revision-Date: 2011-11-08 06:32+0000\n"
+"Last-Translator: Algimantas Margevičius <Unknown>\n"
 "Language-Team: Lithuanian <lt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "(n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2011-08-18 04:39+0000\n"
-"X-Generator: Launchpad (build 13697)\n"
+"X-Launchpad-Export-Date: 2011-11-09 04:50+0000\n"
+"X-Generator: Launchpad (build 14263)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -1332,15 +1332,15 @@ msgstr "Šiandien"
 #, python-format
 msgid "Yesterday"
 msgid_plural "%(days)d days ago"
-msgstr[0] "Prieš %(days)d dieną"
-msgstr[1] "Prieš %(days)d dienas"
+msgstr[0] "Vakar"
+msgstr[1] "Prieš %(days)d dienų"
 msgstr[2] "Prieš %(days)d dienų"
 
 #: GTG/tools/dates.py:56
 #, python-format
 msgid "Tomorrow"
 msgid_plural "In %(days)d days"
-msgstr[0] "Po %(days)d dienos"
+msgstr[0] "Rytoj"
 msgstr[1] "Po %(days)d dienų"
 msgstr[2] "Po %(days)d dienų"
 
