--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2011-10-24 02:02+0000\n"
-"Last-Translator: DmDr <cardioexp@gmail.com>\n"
+"PO-Revision-Date: 2011-12-23 04:00+0000\n"
+"Last-Translator: Nikita Putko <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2011-10-25 04:53+0000\n"
-"X-Generator: Launchpad (build 14185)\n"
+"X-Launchpad-Export-Date: 2011-12-23 07:37+0000\n"
+"X-Generator: Launchpad (build 14560)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -285,7 +285,7 @@ msgstr "Сейчас"
 
 #: GTG/gtk/editor/taskeditor.glade.h:9
 msgid "Someday"
-msgstr ""
+msgstr "Когда-нибудь"
 
 #: GTG/gtk/editor/taskeditor.glade.h:10
 msgid "Soon"
@@ -744,7 +744,7 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure backend"
-msgstr ""
+msgstr "Настроить интерфейс"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
