--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-02-15 10:46+0100\n"
-"PO-Revision-Date: 2011-12-23 04:00+0000\n"
-"Last-Translator: Nikita Putko <Unknown>\n"
+"PO-Revision-Date: 2012-02-19 07:08+0000\n"
+"Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-02-16 05:09+0000\n"
-"X-Generator: Launchpad (build 14781)\n"
+"X-Launchpad-Export-Date: 2012-02-20 05:41+0000\n"
+"X-Generator: Launchpad (build 14833)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:120
 msgid "_View Main Window"
@@ -714,15 +714,15 @@ msgstr ""
 
 #: GTG/core/search.py:87
 msgid "or"
-msgstr ""
+msgstr "или"
 
 #: GTG/core/search.py:88
 msgid "after"
-msgstr ""
+msgstr "после"
 
 #: GTG/core/search.py:89
 msgid "before"
-msgstr ""
+msgstr "до"
 
 #: GTG/core/search.py:90 GTG/tools/dates.py:192
 msgid "today"
@@ -734,7 +734,7 @@ msgstr "завтра"
 
 #: GTG/core/search.py:92
 msgid "nodate"
-msgstr ""
+msgstr "без даты"
 
 #: GTG/core/task.py:60
 msgid "My new task"
@@ -767,7 +767,7 @@ msgstr "Задачи без меток"
 
 #: GTG/core/treefactory.py:103 GTG/gtk/browser/browser.py:1665
 msgid "Search"
-msgstr ""
+msgstr "Искать"
 
 #: GTG/tools/dates.py:50
 msgid "Today"
@@ -819,7 +819,7 @@ msgstr "Все метки"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags:"
-msgstr ""
+msgstr "Только с этими метками:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
@@ -827,7 +827,7 @@ msgstr "Метки для синхронизации"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags:"
-msgstr ""
+msgstr "Задачи с этими метками:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
@@ -835,7 +835,7 @@ msgstr "Пользователь"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Service URL"
-msgstr ""
+msgstr "URL службы"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:86
 msgid "Import tasks from @ replies "
@@ -851,7 +851,7 @@ msgstr "Импортировать метки из Ваших твитов"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:99
 msgid "Tag your GTG tasks with the bug tags"
-msgstr ""
+msgstr "Присвоить вашим задачам из GTG метки ошибок"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:103
 msgid "Tag your GTG tasks with the project targeted by the bug"
@@ -931,11 +931,11 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled."
-msgstr ""
+msgstr "Синхронизация разрешена."
 
 #: GTG/gtk/backends_dialog/configurepanel.py:197
 msgid "Syncing is <span color=\"red\">disabled</span>."
-msgstr ""
+msgstr "Синхронизация <span color=\"red\">запрещена</span>."
 
 #: GTG/gtk/preferences.glade.h:1
 msgid "<b>Dependencies</b>"
@@ -994,26 +994,26 @@ msgid ""
 "Deleting a task cannot be undone, and will delete the following task: "
 msgid_plural ""
 "Deleting a task cannot be undone, and will delete the following tasks: "
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Удаление задачи нельзя отменить! Будет удалена и задача: "
+msgstr[1] "Удаление задачи нельзя отменить! Будут удалены и другие задачи: "
 
 #: GTG/gtk/delete_dialog.py:95
 msgid "Are you sure you want to delete this task?"
 msgid_plural "Are you sure you want to delete these tasks?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Вы уверены, что хотите удалить эту задачу?"
+msgstr[1] "Вы уверены, что хотите удалить эти задачи?"
 
 #: GTG/gtk/delete_dialog.py:101
 msgid "Keep selected task"
 msgid_plural "Keep selected tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Сохранить эту задачу"
+msgstr[1] "Сохранить эти задачи"
 
 #: GTG/gtk/delete_dialog.py:104
 msgid "Permanently remove task"
 msgid_plural "Permanently remove tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Удалить задачу навсегда"
+msgstr[1] "Удалить задачи навсегда"
 
 #: GTG/gtk/delete_dialog.py:115
 #, python-format
