--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-04-02 20:02+0200\n"
-"PO-Revision-Date: 2010-03-22 09:02+0000\n"
-"Last-Translator: Eleanor Chen <chenyueg@gmail.com>\n"
+"PO-Revision-Date: 2012-04-12 20:23+0000\n"
+"Last-Translator: huxuan <Unknown>\n"
 "Language-Team: Simplified Chinese <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2012-04-03 04:55+0000\n"
-"X-Generator: Launchpad (build 15052)\n"
+"X-Launchpad-Export-Date: 2012-04-13 05:27+0000\n"
+"X-Generator: Launchpad (build 15070)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:121
 msgid "_View Main Window"
@@ -28,33 +28,33 @@ msgstr "添加新任务(_N)"
 
 #: GTG/plugins/export/export_templates/description_textual.py:18
 msgid "Text-only"
-msgstr ""
+msgstr "文本方式"
 
 #: GTG/plugins/export/export_templates/description_textual.py:19
 msgid "A template to create a simple text file with some tasks."
-msgstr ""
+msgstr "一个创建包含数个任务的简易文本文件模板"
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page that can be easily printed."
-msgstr ""
+msgstr "一个便于打印的简单网页"
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
 "A template to create a simple HTML page with some tasks that can be easily "
 "printed."
-msgstr ""
+msgstr "一个创建便于打印的包含数个任务的简单HTML页面模板"
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:18
 msgid "Status report"
-msgstr ""
+msgstr "状态报告"
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:19
 msgid "A template to create a compact text file listing only task titles."
-msgstr ""
+msgstr "一个只显示任务标题的复杂文本文件模板"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
-msgstr ""
+msgstr "可折叠的小册子(PDF)"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:19
 msgid ""
@@ -64,7 +64,7 @@ msgstr ""
 
 #: GTG/plugins/export/export_templates/description_sexy.py:18
 msgid "A professional-looking HTML page"
-msgstr ""
+msgstr "一个专业的HTML页面"
 
 #: GTG/plugins/export/export_templates/description_sexy.py:19
 msgid ""
@@ -79,11 +79,11 @@ msgstr "没找到模板"
 #: GTG/plugins/export/export.py:121
 #, python-format
 msgid "GTG could not generate the document: %s"
-msgstr ""
+msgstr "GTG 不能生成此文档： %s"
 
 #: GTG/plugins/export/export.py:169
 msgid "Export the tasks currently listed"
-msgstr ""
+msgstr "导出当前列出的任务"
 
 #: GTG/plugins/export/export.py:323
 msgid "Choose where to save your list"
@@ -91,12 +91,12 @@ msgstr "选择保存列表的位置"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
-msgstr ""
+msgstr "通过邮件发送"
 
 #: GTG/plugins/send_email/sendEmail.py:69
 #, python-format
 msgid "Status: %s"
-msgstr ""
+msgstr "状态: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:70
 #, python-format
@@ -104,6 +104,8 @@ msgid ""
 "\n"
 "Tags: %s"
 msgstr ""
+"\n"
+"标签：%s"
 
 #: GTG/plugins/send_email/sendEmail.py:71
 #, python-format
@@ -112,6 +114,9 @@ msgid ""
 "Subtasks:\n"
 "%s"
 msgstr ""
+"\n"
+"子任务：\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:73
 #, python-format
@@ -120,11 +125,14 @@ msgid ""
 "Task content:\n"
 "%s"
 msgstr ""
+"\n"
+"任务描述：\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:76
 #, python-format
 msgid "Task: %(task_title)s"
-msgstr ""
+msgstr "任务：%(task_title)s"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:1
 msgid "Set the task's location"
@@ -201,7 +209,7 @@ msgstr "添加 Tomboy 便签"
 msgid ""
 "%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
-msgstr ""
+msgstr "%s 似乎已经安装在你的系统中，但是没有提供GTG中的Tomboy/Gnote插件需要的DBus接口"
 
 #: GTG/plugins/tomboy/tomboy.py:240
 msgid "That note does not exist!"
@@ -233,15 +241,15 @@ msgstr "稍后"
 #: GTG/tests/test_dates.py:62 GTG/core/search.py:95 GTG/tools/dates.py:40
 #: GTG/tools/dates.py:52
 msgid "someday"
-msgstr ""
+msgstr "某天"
 
 #: GTG/backends/backend_identica.py:54
 msgid "Identi.ca"
-msgstr ""
+msgstr "Identi.ca"
 
 #: GTG/backends/backend_identica.py:58
 msgid "Imports your identi.ca  messages into your GTG "
-msgstr ""
+msgstr "导入你的identi.ca消息到GTG "
 
 #: GTG/backends/backend_gnote.py:42
 msgid "Gnote"
@@ -257,7 +265,7 @@ msgstr ""
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
-msgstr ""
+msgstr "Remember The Milk"
 
 #: GTG/backends/backend_rtm.py:58
 msgid ""
@@ -274,11 +282,11 @@ msgstr ""
 
 #: GTG/backends/backend_twitter.py:58
 msgid "Imports your twitter  messages into your GTG "
-msgstr ""
+msgstr "导入你的twitter消息到GTG "
 
 #: GTG/backends/backend_tomboy.py:41
 msgid "Tomboy"
-msgstr ""
+msgstr "Tomboy"
 
 #: GTG/backends/backend_tomboy.py:45
 msgid ""
@@ -290,7 +298,7 @@ msgstr ""
 
 #: GTG/backends/backend_mantis.py:42
 msgid "MantisBT"
-msgstr ""
+msgstr "MantisBT"
 
 #: GTG/backends/backend_mantis.py:46
 msgid ""
@@ -322,23 +330,23 @@ msgstr ""
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
-msgstr ""
+msgstr "Evolution 任务"
 
 #: GTG/backends/backend_evolution.py:73
 msgid "Lets you synchronize your GTG tasks with Evolution tasks"
-msgstr ""
+msgstr "让你实现GTG任务和Evolution任务之间的同步"
 
 #: GTG/backends/backend_localfile.py:61
 msgid "Local File"
-msgstr ""
+msgstr "本地文件"
 
 #: GTG/backends/backend_localfile.py:66
 msgid "Your tasks are saved in a text file (XML format). "
-msgstr ""
+msgstr "你的任务会保存在一个文本文件中(XML格式)。 "
 
 #: GTG/backends/backend_launchpad.py:53
 msgid "Launchpad"
-msgstr ""
+msgstr "Launchpad"
 
 #: GTG/backends/backend_launchpad.py:57
 msgid ""
@@ -358,7 +366,7 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:244
 msgid "Bug"
-msgstr ""
+msgstr "Bug"
 
 #: GTG/backends/backend_launchpad.py:329
 msgid "Link to bug: "
@@ -569,7 +577,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:107
 msgid "Learn how to use the Quick Add Entry"
-msgstr ""
+msgstr "学习怎样使用快速插入条目功能"
 
 #: GTG/core/firstrun_tasks.py:108
 msgid ""
@@ -611,19 +619,19 @@ msgstr ""
 
 #: GTG/core/search.py:86
 msgid "not"
-msgstr ""
+msgstr "不是"
 
 #: GTG/core/search.py:87
 msgid "or"
-msgstr ""
+msgstr "或者"
 
 #: GTG/core/search.py:88
 msgid "after"
-msgstr ""
+msgstr "之后"
 
 #: GTG/core/search.py:89
 msgid "before"
-msgstr ""
+msgstr "之前"
 
 #: GTG/core/search.py:90 GTG/tools/dates.py:238
 msgid "today"
@@ -635,11 +643,11 @@ msgstr "明天"
 
 #: GTG/core/search.py:92
 msgid "nodate"
-msgstr ""
+msgstr "无日期"
 
 #: GTG/core/search.py:96
 msgid "notag"
-msgstr ""
+msgstr "无标签"
 
 #: GTG/core/task.py:55
 msgid "My new task"
@@ -659,7 +667,7 @@ msgstr "推迟"
 
 #: GTG/core/task.py:169
 msgid "start"
-msgstr ""
+msgstr "开始"
 
 #: GTG/core/task.py:175
 msgid "due"
@@ -676,7 +684,7 @@ msgstr "没有标签的任务"
 
 #: GTG/core/treefactory.py:102 GTG/gtk/browser/browser.py:1561
 msgid "Search"
-msgstr ""
+msgstr "查询"
 
 #: GTG/tools/dates.py:242
 msgid "next week"
@@ -692,31 +700,31 @@ msgstr "明年"
 
 #: GTG/tools/dates.py:251
 msgid "Monday"
-msgstr ""
+msgstr "周一"
 
 #: GTG/tools/dates.py:252
 msgid "Tuesday"
-msgstr ""
+msgstr "周二"
 
 #: GTG/tools/dates.py:253
 msgid "Wednesday"
-msgstr ""
+msgstr "周三"
 
 #: GTG/tools/dates.py:254
 msgid "Thursday"
-msgstr ""
+msgstr "周四"
 
 #: GTG/tools/dates.py:255
 msgid "Friday"
-msgstr ""
+msgstr "周五"
 
 #: GTG/tools/dates.py:256
 msgid "Saturday"
-msgstr ""
+msgstr "周六"
 
 #: GTG/tools/dates.py:257
 msgid "Sunday"
-msgstr ""
+msgstr "周日"
 
 #: GTG/tools/dates.py:294
 msgid "Today"
@@ -740,47 +748,47 @@ msgstr "gtg 已经在运行！"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:52
 msgid "Filename:"
-msgstr ""
+msgstr "文件名:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "Import tags"
-msgstr ""
+msgstr "导入标签"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "All tags"
-msgstr ""
+msgstr "全部标签"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags:"
-msgstr ""
+msgstr "只是这些标签"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
-msgstr ""
+msgstr "同步的标签"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags:"
-msgstr ""
+msgstr "含有这些标签的任务："
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
-msgstr ""
+msgstr "用户名"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Service URL"
-msgstr ""
+msgstr "服务 URL"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:86
 msgid "Import tasks from @ replies "
-msgstr ""
+msgstr "从@回复中导入任务 "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:91
 msgid "Import tasks from direct messages"
-msgstr ""
+msgstr "从私信中导入任务"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:95
 msgid "Import tasks from your tweets"
-msgstr ""
+msgstr "从tweets中导入任务"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:99
 msgid "Tag your GTG tasks with the bug tags"
@@ -792,40 +800,38 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:50
 msgid "Password:"
-msgstr ""
+msgstr "密码:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:51
 msgid "Check for new tasks every"
-msgstr ""
+msgstr "检查新任务每"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:96
 msgid " minute"
 msgid_plural " minutes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] " 分钟"
 
 #: GTG/gtk/backends_dialog/addpanel.py:75
 msgid "Select synchronization service:"
-msgstr ""
+msgstr "选择同步服务："
 
 #: GTG/gtk/backends_dialog/addpanel.py:179
 msgid "Syncing is <span color=\"red\">disabled</span>"
-msgstr ""
+msgstr "同步已经<span color=\"red\">关闭</span>"
 
 #: GTG/gtk/backends_dialog/addpanel.py:185
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "创作者"
 
 #: GTG/gtk/backends_dialog/__init__.py:286
 #, python-format
 msgid "Do you really want to remove the '%s' synchronization service?"
-msgstr ""
+msgstr "你确定想删除'%s'同步服务么？"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
-msgstr ""
+msgstr "准备开始同步"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:164
 #, python-format
@@ -837,7 +843,7 @@ msgstr[1] ""
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
 msgid "There is no task tagged %s"
-msgstr ""
+msgstr "没有标签为%s的任务"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:171
 #, python-format
