--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,6 +38,7 @@
     * Fix for bug #1026264: Write user documentation for search/smart tag
     * Fix for bug #1020611: Use deafult configuration when config is corrupted by Abhiram
     * Fix for bug #1013869: Saved searches can't be deleted when GTG crashes, by Antonio Roquentin
+    * Remove use of liblarch's "transparent" concept (since it's been removed from liblarch), fixes bugs #1001962, #1001962, #1069257, #1069963: intermediary tags, counter initialization, and regressions caused by initial versions of the patch
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
