--- a/po/de.po
+++ b/po/de.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-28 17:02+0200\n"
-"PO-Revision-Date: 2013-04-28 07:42+0000\n"
+"PO-Revision-Date: 2013-05-29 16:43+0000\n"
 "Last-Translator: Borim <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-04-29 04:39+0000\n"
-"X-Generator: Launchpad (build 16580)\n"
+"X-Launchpad-Export-Date: 2013-05-30 05:53+0000\n"
+"X-Generator: Launchpad (build 16652)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -1066,6 +1066,9 @@ msgid ""
 "%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
+"Scheinbar ist %s auf ihrem System installiert, aber es stellt kein DBus "
+"interface zur Verfügung, welches vom Tomboy/Gnote plugin in GTG benötigt "
+"wird."
 
 #: GTG/plugins/tomboy/tomboy.py:243
 msgid "That note does not exist!"
@@ -1214,6 +1217,86 @@ msgid ""
 "\n"
 "The GTG team."
 msgstr ""
+"Willkommen bei Getting Things GNOME, ihrem neuen Aufgabenplaner! In Getting "
+"Things GNOME! (GTG) ist alles eine Aufgabe. Vom Bau einer Brücke über den "
+"Pazifischen Ozean bis zum Wechseln einer Glühbirne, oder dem Organisieren "
+"einer Party!\n"
+"\n"
+"Wenn sie GTG das erste Mal verwenden, nehmen sie sich bitte die Zeit diesen "
+"Einführung zu lesen, denn sie enthält nützliche Informationen wie man mit "
+"GTG den Alltag organisiert.\n"
+"\n"
+"Erstellen und anpassen von Aufgaben:\n"
+"\n"
+"GTG zu verwenden ist leicht: sie verwalten alles was sie erledigen müssen, "
+"indem sie neue Aufgaben erstellen. Zu diesem Zweck klicken sie auf den "
+"&quot;Neue Aufgabe&quot; Knopf, erstellen eine Beschreibung, setzen ein paar "
+"Parameter und das wars! Wenn eine Aufgabe beendet ist, kann sie geschlossen "
+"werden, indem der &quot;Als erledigt markieren&quot; Knopf gedrückt wird.\n"
+"\n"
+"In GTG wird eine Aufgabe während des Schreibens automatisch gespeichert. Es "
+"gibt keine Notwendigkeit irgendeinen &quot;Speichern&quot; Knopf zu drücken! "
+"Probieren es aus: füge etwas Text zu dieser Aufgabe hinzu, schließe dieses "
+"Fenster und öffne es wieder: ihre Änderungen sind immer noch da!\n"
+"\n"
+"Eine Teilaufgabe hinzufügen:\n"
+"\n"
+"Im Leben bekommt man oft mehr erledigt, wenn man Aufgaben in kleinere, "
+"besser handhabbare Teile zerlegt. GTG hilft dir genau dabei, indem "
+"&quot;Teilaufgaben&quot; erstellt werden. In GTG werden diese Teilaufgaben "
+"als Vorbedingung angesehen, die erledigt werden müssen, bevor die "
+"übergeordnete Aufgabe abgeschlossen werden kann.\n"
+"\n"
+"Aus diesem Grund kann eine Aufgabe in GTG eine oder mehrere Teilaufgaben "
+"enthalten. Diese erscheinen in der Aufgabenbeschreibung als Links, genauso "
+"wie der Link unten. Um eine Teilaufgabe zu öffnen und anzupassen, klicken "
+"sie einfach auf den entsprechenden Link! Probieren sie es selbst aus: öffnen "
+"sie folgende Teilaufgabe:\n"
+"<subtask>1@1</subtask>\n"
+"\n"
+"Aufgabe abschließen:\n"
+"\n"
+"Wenn sie mit einer Aufgabe fertig sind, können sie diese in GTG abschließen, "
+"indem sie entweder den Knopf &quot;Als erledigt markieren&quot; oder "
+"&quot;Verwerfen&quot; drücken. Verwenden sie den ersten Knopf, wenn die "
+"Aufgabe erledigt ist und den Anderen, wenn die Aufgabe geschlossen werden "
+"soll, weil sie nicht mehr relevant ist. Wollen sie es ausprobieren? "
+"Versuchen sie doch mal die obere Teilaufgabe zu schließen!\n"
+"\n"
+"Wenn sie eine Aufgabe abschließen, werden sie bemerken, dass alle "
+"dazugehörigen Teilaufgaben genauso geschlossen werden! In GTG wird davon "
+"ausgegangen, dass die Teilaufgaben einer abgeschlossenen Aufgabe nicht mehr "
+"erledigt werden müssen (schließlich waren es ja nur Vorbedingungen).\n"
+"\n"
+"Denken sie daran, dass Aufgaben, die sie als erledigt markiert oder "
+"verworfen haben, in der &quot;Beendete Aufgaben&quot; Ansicht aufgelistet "
+"werden, welche standardmäßig versteckt ist. Sie kann aber leicht angezeigt "
+"werden, indem sie das Ansicht Menü verwenden.\n"
+"\n"
+"Erfahren sie mehr über GTG:\n"
+"\n"
+"Wenn sie mehr über die anderen Möglichkeiten von GTG erfahren möchten, dann "
+"finden sie hier weitere Informationen unter:\n"
+"<subtask>2@1</subtask>\n"
+"<subtask>3@1</subtask>\n"
+"<subtask>4@1</subtask>\n"
+"<subtask>5@1</subtask>\n"
+"<subtask>6@1</subtask>\n"
+"<subtask>7@1</subtask>\n"
+"<subtask>8@1</subtask>\n"
+"\n"
+"Genauso können sie die GTG Dokumentation durchsuchen, indem sie F1 drücken, "
+"oder das Hilfe Menü verwenden.\n"
+"\n"
+"Wir hoffen aufrichtig, dass sie Freude an der Benutzung von GTG haben, und "
+"bedanken uns, dass sie es ausprobieren! Bitte senden sie uns Fehlerberichte "
+"und Verbesserungsvorschläge über die Webseite: "
+"https://bugs.launchpad.net/gtg/+filebug Wenn sie Tipps erhalten wollen, wie "
+"man GTG verwendet oder wenn sie über die neusten Verbesserungen auf dem "
+"laufenden bleiben wollen, dann besuchen sie unseren Blog auf "
+"http://gtg.fritalk.com\n"
+"\n"
+"Das GTG Team"
 
 #: GTG/core/firstrun_tasks.py:114
 msgid "Learn How To Use Subtasks"
