--- a/po/ca.po
+++ b/po/ca.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-28 17:02+0200\n"
-"PO-Revision-Date: 2013-04-20 15:38+0000\n"
-"Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
+"PO-Revision-Date: 2013-06-01 03:47+0000\n"
+"Last-Translator: Radina Matic <radina.matic@gmail.com>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-04-29 04:38+0000\n"
-"X-Generator: Launchpad (build 16580)\n"
+"X-Launchpad-Export-Date: 2013-06-01 05:17+0000\n"
+"X-Generator: Launchpad (build 16660)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -60,7 +60,7 @@ msgstr "Totes les etiquetes"
 msgid ""
 "Just these                                                                   "
 "    tags:"
-msgstr ""
+msgstr "Només aquestes etiquetes:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:68
 msgid "Tags to sync"
@@ -75,7 +75,7 @@ msgstr "Totes les tasques"
 msgid ""
 "Tasks with                                                                 "
 "these tags:"
-msgstr ""
+msgstr "Tasques amb aquestes etiquetes:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
@@ -89,7 +89,7 @@ msgstr ""
 msgid ""
 "Import tasks                                                         from @ "
 "replies "
-msgstr ""
+msgstr "Importar tasques de respostes @ "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:94
 msgid "Import tasks from direct messages"
@@ -100,7 +100,7 @@ msgid ""
 "Import                                                                  "
 "tasks from                                                                  "
 "your tweets"
-msgstr ""
+msgstr "Importar tasques de teus tuits"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:109
 msgid "Tag your GTG tasks with the bug tags"
@@ -144,15 +144,15 @@ msgstr "Inicia el Getting Things GNOME! en entrar"
 
 #: GTG/gtk/preferences.glade.h:2
 msgid "New Task Shortcut :"
-msgstr ""
+msgstr "Drecera de teclat per Nova tasca"
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "<b>System</b>"
-msgstr ""
+msgstr "<b>Sistema</b>"
 
 #: GTG/gtk/preferences.glade.h:4
 msgid "Enable colored backgrounds in the task list"
-msgstr ""
+msgstr "Habilitar colors de fons en la llista de tasques"
 
 #: GTG/gtk/preferences.glade.h:5
 msgid "Show description preview in the task list."
@@ -168,19 +168,19 @@ msgstr ""
 
 #: GTG/gtk/preferences.glade.h:8
 msgid "<b>Editor</b>"
-msgstr ""
+msgstr "<b>Editor</b>"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "page 1"
-msgstr ""
+msgstr "pàgina 1"
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "page 2"
-msgstr ""
+msgstr "pàgina 2"
 
 #: GTG/gtk/preferences.glade.h:11
 msgid "page 3"
-msgstr ""
+msgstr "pàgina 3"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -193,7 +193,7 @@ msgstr ""
 
 #: GTG/gtk/preferences.py:249
 msgid "Warning"
-msgstr ""
+msgstr "Advertència"
 
 #: GTG/gtk/preferences.py:263
 #, python-format
@@ -202,6 +202,10 @@ msgid ""
 "using this key.\n"
 "Please try with a key such as Control, Alt or Shift at the same time."
 msgstr ""
+"No es pot fer servir la drecera «%s» perquè no seria possible escriure amb "
+"aquesta tecla.\n"
+"Proveu amb una altra tecla com ara la de Control, l'Alt o de Majúscules a la "
+"vegada."
 
 #: GTG/gtk/browser/__init__.py:37 GTG/gtk/browser/taskbrowser.glade.h:25
 #: GTG/gtk/editor/__init__.py:31
@@ -214,7 +218,7 @@ msgstr "Marca la tasca seleccionada com a completada"
 
 #: GTG/gtk/browser/__init__.py:39 GTG/gtk/editor/__init__.py:32
 msgid "Mark as not Done"
-msgstr ""
+msgstr "Marcar com no realitzada"
 
 #: GTG/gtk/browser/__init__.py:40 GTG/gtk/browser/__init__.py:44
 msgid "Mark the selected task as to be done"
@@ -263,11 +267,11 @@ msgstr ""
 
 #: GTG/gtk/browser/__init__.py:53
 msgid "You can create, open or filter your tasks here"
-msgstr ""
+msgstr "Aquí pots crear, obrir o filtrar les teves tasques"
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
-msgstr ""
+msgstr "Esborra"
 
 #: GTG/gtk/browser/custominfobar.py:34
 #, python-format
@@ -276,6 +280,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"El servei de sincronització <b>%s</b> no pot iniciar la sessió amb les dades "
+"d'identificació proporcionades i s'ha desactivat. Per tornar a iniciar la "
+"sessió, reactiva el servei."
 
 #: GTG/gtk/browser/custominfobar.py:39
 #, python-format
