--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-04-28 17:02+0200\n"
-"PO-Revision-Date: 2013-05-21 23:21+0000\n"
+"PO-Revision-Date: 2013-05-31 07:07+0000\n"
 "Last-Translator: Sergio Redondo <sergioredondo@outlook.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2013-05-23 05:30+0000\n"
-"X-Generator: Launchpad (build 16640)\n"
+"X-Launchpad-Export-Date: 2013-06-01 05:17+0000\n"
+"X-Generator: Launchpad (build 16660)\n"
 
 #: GTG/gtk/backends_dialog/__init__.py:75
 #, python-format
@@ -145,7 +145,7 @@ msgstr "Iniciar Getting Things GNOME! al iniciar sesión"
 
 #: GTG/gtk/preferences.glade.h:2
 msgid "New Task Shortcut :"
-msgstr ""
+msgstr "Atajo de teclado para Nueva Tarea"
 
 #: GTG/gtk/preferences.glade.h:3
 msgid "<b>System</b>"
@@ -203,6 +203,10 @@ msgid ""
 "using this key.\n"
 "Please try with a key such as Control, Alt or Shift at the same time."
 msgstr ""
+"No se puede usar el atajo de teclado «%s» porque se haría imposible escribir "
+"usando esta tecla.\n"
+"Por favor, inténtalo con una tecla como Control, Alt o Mayús. al mismo "
+"tiempo."
 
 #: GTG/gtk/browser/__init__.py:37 GTG/gtk/browser/taskbrowser.glade.h:25
 #: GTG/gtk/editor/__init__.py:31
@@ -264,7 +268,7 @@ msgstr "Mostrar etiqueta en la vista de trabajo"
 
 #: GTG/gtk/browser/__init__.py:53
 msgid "You can create, open or filter your tasks here"
-msgstr ""
+msgstr "Aquí puedes crear, abrir o filtrar tus tareas"
 
 #: GTG/gtk/browser/__init__.py:54
 msgid "Clear"
@@ -1058,6 +1062,8 @@ msgid ""
 "%s seems to be installed on your system, but it does not provide a DBus "
 "interface which is required by the Tomboy/Gnote plugin in GTG."
 msgstr ""
+"%s parece estar instalado en tu sistema, pero no proporciona una interfaz "
+"DBus requerida por el plugin Tomboy/Gnote en GTG."
 
 #: GTG/plugins/tomboy/tomboy.py:243
 msgid "That note does not exist!"
@@ -1071,7 +1077,7 @@ msgstr "Esa nota no existe. ¿Quiere crear una nueva?"
 msgid ""
 "This Tomboy note                                        does not exist "
 "anymore. Do you want to                                        create it?"
-msgstr ""
+msgstr "Esta nota Tomboy no existe. ¿Quieres crearla?"
 
 #: GTG/gtg.py:85
 msgid "gtg is already running!"
